@@ -110,28 +110,62 @@ DLL_EXPORT void hdl_shut (void)
 {
 HDLSHD *shdent;
 
+#if defined( _MSVC_ )
+HDLSHD *loggercall;
+int logger_flag = 0;
+#endif // defined( _MSVC_ )
+
     WRITEMSG(HHCHD900I);
 
     obtain_lock (&hdl_sdlock);
 
     for(shdent = hdl_shdlist; shdent; shdent = hdl_shdlist)
     {
-        WRITEMSG(HHCHD901I,shdent->shdname);
+#if defined( _MSVC_ )
+        if ( strcmp( shdent->shdname, "logger_term" ) == 0 )
         {
-            (shdent->shdcall) (shdent->shdarg);
+            loggercall = malloc(sizeof(HDLSHD));
+            loggercall->shdname = shdent->shdname;
+            loggercall->shdcall = shdent->shdcall;
+            loggercall->shdarg = shdent->shdarg;
+            logger_flag = 1;
         }
-        WRITEMSG(HHCHD902I,shdent->shdname);
-
+        else
+#endif // defined( _MSVC_ )
+        {
+            WRITEMSG(HHCHD901I,shdent->shdname);
+            {
+                (shdent->shdcall) (shdent->shdarg);
+            }
+            WRITEMSG(HHCHD902I,shdent->shdname);
+        }   
         /* Remove shutdown call entry to ensure it is called once */
         hdl_shdlist = shdent->next;
         free(shdent);
     }
 
     release_lock (&hdl_sdlock);
+#if defined( _MSVC_ )
+    if ( logger_flag == 1 )
+    {
+        if ( sysblk.shutimmed )
+            /* shutdown of logger is skipped in a Windows Environment 
+             * because we still have messages to write to the log file 
+             */
+            WRITEMSG(HHCHD903I, loggercall->shdname); 
+        else
+        {
+            WRITEMSG(HHCHD901I, loggercall->shdname);
+            {
+                (loggercall->shdcall) (loggercall->shdarg);
+            }
+            WRITEMSG(HHCHD902I, loggercall->shdname);
+        }
+    }
+#endif // defined( _MSVC_ )
 
     WRITEMSG(HHCHD909I);
 }
-
 
 #if defined(OPTION_DYNAMIC_LOAD)
 
